contrast issue

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ nav ul {
 
 .hero {
   min-height: 90vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), transparent),
+  background: linear-gradient(rgba(0, 0, 0, 0.8), transparent),
     url("./img/landing-page.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -116,7 +116,7 @@ nav ul {
 
 #locations {
   min-height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), transparent),
+  background: linear-gradient(rgba(0, 0, 0, 0.7), transparent),
     url("./img/new-york-page.png");
   background-repeat: no-repeat;
   background-size: cover;
